# memory-mcp

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/memory_mcp/: __init__.py  config.py  file_manager.py  server.py
src/memory_mcp/backend/: __init__.py  config.py  llm.py  lock.py  logger.py  server.py
src/memory_mcp/backend/core/: matcher.py  memory_registry.py  validators.py
src/memory_mcp/backend/tools/: memorize.py  memory_tools.py  recall.py
src/memory_mcp/core/: __init__.py  matcher.py  memory_registry.py  validators.py
src/memory_mcp/frontend/: __init__.py  client.py  config.py  logger.py  mcp_server.py
src/memory_mcp/tools/: memorize.py  memory_tools.py  recall.py
src/memory_mcp/utils/: __init__.py  file_manager.py  llm.py  logger.py
tests/: test_backend_server.py  test_frontend_client.py  test_id_generation.py  test_validators.py
