[project]
name = "memory-mcp"
version = "0.1.0"
description = "MCP server for managing project memories with LLM-powered decision making"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "thefuzz>=0.22.1",
    "rusty-results>=1.1.1",
]

[project.scripts]
memory-mcp = "memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
