[project]
name = "memory-mcp"
version = "0.1.0"
description = "MCP server for managing project memories with LLM-powered decision making"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "thefuzz>=0.22.1",
    "rusty-results>=1.1.1",
    "aiohttp>=3.13.2",
    "filelock>=3.20.1",
]

[project.scripts]
memory-mcp = "memory_mcp.frontend.mcp_server:main"
memory-mcp-backend = "memory_mcp.backend.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
